--- a/3. Git.md
+++ b/3. Git.md
@@ -1,2 +1,4 @@
 
-[Tutorial da Microsoft](https://learn.microsoft.com/pt-br/windows/wsl/tutorials/wsl-git)
+[Tutorial da Microsoft: https://learn.microsoft.com/pt-br/windows/wsl/tutorials/wsl-git](https://learn.microsoft.com/pt-br/windows/wsl/tutorials/wsl-git)
+
+[Meu tutorial: https://gist.github.com/octoelli/01c309d9f4e5b6d8f5bc1a00b653cb27](https://gist.github.com/octoelli/01c309d9f4e5b6d8f5bc1a00b653cb27)
